# IntelligenzaArtificiale

./: CMakeLists.txt  IntelligenzaArtificiale.cpp  IntelligenzaArtificiale.h  Perceptron.cpp  Perceptron.h  README.md
include/: AdalineGD.h  Model.h  Perceptron.h
src/: AdalineGD.cpp  Model.cpp  Perceptron.cpp
